# Base-Auth-Service

./: .gitignore  README.md  docker-compose.yml
src/: Makefile  enums.py  exceptions.py  main.py  pyproject.toml  settings.py
src/api/: __init__.py  deps.py  router.py
src/api/v1/: __init__.py  auth.py  router.py  user.py  users.py
src/api/v1/endpoints/: auth.py
src/core/: backends.py  key_schema.py  settings.py
src/db/: postgres.py  redis.py
src/db/models/: __init__.py  base.py  jwt_session.py  mixins.py  user.py
src/db/repositories/: base.py  jwt.py  jwt_session.py  user.py
src/migrations/: env.py
src/migrations/versions/: 58f2ae6baf99_init.py  639d399b3f0c_init.py  697a44259d6a_init.py  8a5f37575391_init.py
src/models/postgres/: __init__.py  base.py  jwt.py  mixins.py  user.py
src/models/redis/: base.py  jwt.py
src/schemas/: auth.py  base.py  jwt.py  jwt_session.py  user.py
src/services/: auth.py  jwt_session.py  token.py  user.py
src/tests/: conftest.py  utils.py
src/tests/auth/test_integration/: test_recreate_access_token.py  test_sign_in.py  test_sign_out.py  test_sign_up.py  test_validate_access_token.py  test_validate_refresh_token.py
src/tests/factories/: jwt_session.py  user.py
src/tests/users/: test_get_all_users.py  test_get_current_user.py
src/utils/: headers.py  json.py  oauth.py
