[tool.poetry]
name = "base-auth-service"
version = "0.1.0"
description = ""
authors = ["daniil <snow41521@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
