[tool.poetry]
name = "base-auth-service"
version = "0.1.0"
description = ""
authors = ["daniil <snow41521@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
aioredis = "2.0.0"
pydantic = "^1.10.2"
orjson = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
